--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,9 +5,8 @@
 
 @media (max-width: 320px) {
   .header__logo {
-    max-width: 100%;
     padding: 28px 0px 27px 27px;
-    max-width: 103.74px;
+    width: 103.74px;
     height: 24.4px;
   }
 }
