исправить комментарии ревьюера

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -4,7 +4,7 @@
   border: none;
   background-position: center;
   background-size: cover;
-  background-color: #000;
+  background-color: transparent;
   width: 32px;
   height: 32px;
   position: absolute;
