--- a/blocks/edit-form/__input/edit-form__input.css
+++ b/blocks/edit-form/__input/edit-form__input.css
@@ -2,7 +2,7 @@
   border: 0;
   padding: 0;
   padding-bottom: 8px;
-  border-bottom: 1px black solid;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-size: 14px;
   line-height: 1.21;
   font-family: inherit;
