--- a/blocks/elements/__button/elements__button.css
+++ b/blocks/elements/__button/elements__button.css
@@ -6,7 +6,7 @@
     height: 19px;
     cursor: pointer;
     transition: 0.4s ease;
-    background-color: #ffffff;
+    background-color: transparent;
   }
   
   .elements__button:hover {
