--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    background-color: #000;
+    background-color: transparent;
     padding: 0;
     align-self: center;
     background-image: url(../../../images/plus.svg);
