--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: center;
     border: 1px solid #fff;
-    background-color: #000;
+    background-color: transparent;
     padding: 0;
     cursor: pointer;
   }
@@ -22,5 +22,6 @@
       height: 18px;
       align-self: center;
       margin: 0;
+      white-space: nowrap;
     }
   }
