--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -12,7 +12,8 @@
       padding-top: 29px;
       column-gap: 12px;
       width: 100%;
-      justify-content: center;
-      padding-left: 13px;
+      box-sizing: border-box; 
+      grid-template-columns: 189px 18px;
+      padding-left: 45px;
     }
   }
