--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -10,9 +10,8 @@
     .profile {
       margin: 0 auto;
       width: 282px;
-      height: 286px;
-      display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 30px;
     }
   }
