--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
-@import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
-@import url(../blocks/page.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
@@ -20,6 +20,7 @@
 @import url(../blocks/elements/__button/elements__button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/edit-form/edit-form.css);
@@ -30,6 +31,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/edit-form/__textfields/edit-form__textfields.css);
 @import url(../blocks/popup/__saved/popup__saved.css);
+@import url(../blocks/popup/__user-name/popup__user-name.css);
 @import url(../blocks/elements/__button/_active/elements__button_active.css);
 
 
