--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -1,4 +1,4 @@
-.elements__button {
+.elements__like-button {
     background-image: url(../../../images/like.svg);
     background-size: cover;
     border: none;
@@ -9,6 +9,6 @@
     background-color: transparent;
   }
   
-  .elements__button:hover {
+  .elements__like-button:hover {
     opacity: .5;
   }
