--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -1,7 +1,6 @@
 .popup__wrapper {
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
+    flex-direction: column;
+    gap: 10px;
+}
