fix: добавлена корзина для удаления

--- a/blocks/elements/__delete-button/elements__delete-button.css
+++ b/blocks/elements/__delete-button/elements__delete-button.css
@@ -1,5 +1,5 @@
 .elements__delete-button {
-  background-image: url(../../../images/trash.svg);
+  background-image: url(../../../images/Trash.svg);
   width: 18px;
   height: 19px;
   border: none;
