--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,7 @@
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__user-name/profile__user-name.css);
-@import url(../blocks/profile/__user-occupation/profile__user-occipation.css);
+@import url(../blocks/profile/__user-occupation/.profile__user-occupation);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/elements/elements.css);
@@ -27,6 +27,8 @@
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/edit-form/__input/edit-form__input.css);
+@import url(../blocks/edit-form/__input/_text/edit-form__input_text_error.css);
+@import url(../blocks/edit-form/__input-error/edit-form__input-error.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/edit-form/__textfields/edit-form__textfields.css);
@@ -40,6 +42,4 @@
 @import url(../blocks/popup/__wrapper/popup__wrapper.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 
-
-
-
+@import url(../blocks/edit-form/__input/_visible/edit-form__input-error_visible.css);
