--- a/src/blocks/elements/__container/elements__container.css
+++ b/src/blocks/elements/__container/elements__container.css
@@ -1,7 +1,6 @@
 .elements__container {
     display: flex;
     justify-content: space-between;
-    margin: 20px 0 27px;
-    padding: 0 20px 0 20px;
+    padding: 20px 20px 17px 20px;
     align-items: baseline;
   }
