--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,3 +42,10 @@
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 
 @import url(../blocks/edit-form/__input/_visible/edit-form__input-error_visible.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
+@import url(../blocks/elements/__likes/elements__likes.css);
+@import url(../blocks/popup/__header/_type/popup__header_type_submit.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+
+
+
